--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,3 @@
-openvpn_config_file_name: openvpn.ovpn
-openvpn_config_name: "{{ inventory_hostname }}"
+openvpn_client_config_file_name: openvpn.ovpn
+openvpn_client_name: "{{ inventory_hostname }}"
 
