--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
-  author: Insert author(s) here
-  description: Insert description here
+  author: Fritz Otlinghaus
+  description: Deploy openvpn config on host
   company: stuvus (https://stuvus.uni-stuttgart.de)
 
   license: CC-BY-SA
@@ -15,6 +15,8 @@ galaxy_info:
         - bionic
 
   galaxy_tags:
-    - Insert ansible galaxy tags here
+    - openvpn
+    - vpn
+    - client
 
 dependencies: []
