--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,18 +10,17 @@
   delegate_to: "{{ openvpn_client_server }}"
   when: openvpn_client_server is defined
 
-- name: Copy to host
+- name: Copy OpenVPN config to host 
   copy:
     content: "{{ openvpn_config_file['content'] | b64decode }}"
     dest: "/etc/openvpn/{{ openvpn_client_name }}-{{ openvpn_client_server }}.conf"
   when: openvpn_client_server is defined
   notify: Restart openvpn service
 
-- name: Copy to host
+- name: Copy OpenVPN config to host 
   copy:
-    src: "{{ openvpn_client_config_file_name }}"
+    src: "files/{{ inventory_hostname }}/{{ openvpn_client_config_file_name }}"
     dest: "/etc/openvpn/{{ openvpn_client_name }}.conf"
   when: openvpn_client_server is not defined
   notify: Restart openvpn service
-
 
