--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,5 @@
 ---
-openvpn_client_config_file_name: openvpn.ovpn
+openvpn_client_base_dir: /etc/openvpn
 openvpn_client_name: "{{ inventory_hostname }}"
+openvpn_client_up_commands: []
+openvpn_client_extra_config: []
