--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Restart openvpn service
+- name: Restart OpenVPN service
   service:
     name: "openvpn@{{ openvpn_client_name }}-{{ openvpn_client_server }}"
     enabled: yes
