openvpn_client_base_dir is not supposed to be configured
The openvpn systemd service template doesn't work with base directories
other than /etc/openvpn

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,2 +1,3 @@
 ---
+openvpn_client_base_dir: /etc/openvpn
 openvpn_client_config_path: "{{ openvpn_client_base_dir }}/{{ openvpn_client_name }}-{{ openvpn_client_server }}.conf"
