More compact task code
Reactive to a review comment:

Yes, I would just replace this line https://github.com/stuvusIT/openvpn-client/pull/2/files/cba0a6efd961249fe4df41dc146cc2be789d911a#diff-2444ad0870f91f17ca6c2a5e96b26823R57
with
```
with_items: "{{ openvpn_client_extra_config | combine(['script-security 2', 'up {{ openvpn_client_base_dir }}/up.sh']) }}"
```
One could also use `set_fact` or the general `vars` to create a combined version of the options.

_Originally posted by @SlothOfAnarchy in https://github.com/stuvusIT/openvpn-client/pull/2_

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -38,21 +38,9 @@
     mode: 0755
   notify: Restart OpenVPN service
 
-- name: Allow up-script to execute commands
-  lineinfile:
-    path: "{{ openvpn_client_config_path }}"
-    line: script-security 2
-  notify: Restart OpenVPN service
-
-- name: Add up-script to config
-  lineinfile:
-    path: "{{ openvpn_client_config_path }}"
-    line: up {{ openvpn_client_base_dir }}/up.sh
-  notify: Restart OpenVPN service
-
 - name: Add extra lines to config
   lineinfile:
     path: "{{ openvpn_client_config_path }}"
     line: "{{ item }}"
-  with_items: "{{ openvpn_client_extra_config }}"
+  with_items: "{{ ['script-security 2', 'up '+openvpn_client_base_dir+'/up.sh'] + openvpn_client_extra_config }}"
   notify: Restart OpenVPN service
