--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
+
 - name: Install OpenVPN
   apt: 
     name: openvpn
@@ -8,39 +9,7 @@
     path: "{{ openvpn_client_base_dir }}"
     state: directory
 
-- name: Slurp recommended client config
-  slurp:
-    src: "{{ hostvars[openvpn_client_server].openvpn_base_dir }}/{{ openvpn_client_name }}-{{ openvpn_client_server }}.ovpn"
-  register: openvpn_config_file
-  delegate_to: "{{ openvpn_client_server }}"
-  when: openvpn_client_local_config_path is not defined
-
-- name: Copy client config to host
-  copy:
-    content: "{{ openvpn_config_file['content'] | b64decode }}"
-    dest: "{{ openvpn_client_config_path }}"
-  register: openvpn_client_config_stat
-  when: openvpn_client_local_config_path is not defined
-  notify: Restart OpenVPN service
-
-- name: Copy client config to host
-  copy:
-    src: "files/{{ inventory_hostname }}/{{ openvpn_client_local_config_path }}"
-    dest: "{{ openvpn_client_config_path }}"
-  register: openvpn_client_config_stat
-  when: openvpn_client_local_config_path is defined
-  notify: Restart OpenVPN service
-
-- name: Instantiate up-script
-  template:
-    src: up.sh.j2
-    dest: "{{ openvpn_client_base_dir }}/up.sh"
-    mode: 0755
-  notify: Restart OpenVPN service
-
-- name: Add extra lines to config
-  lineinfile:
-    path: "{{ openvpn_client_config_path }}"
-    line: "{{ item }}"
-  with_items: "{{ ['script-security 2', 'up '+openvpn_client_base_dir+'/up.sh'] + openvpn_client_extra_config }}"
-  notify: Restart OpenVPN service
+- include_tasks: create_client.yml
+  with_items: "{{ openvpn_client_instances }}"
+  loop_control:
+    loop_var: openvpn_client
