--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Reload systemd
+  systemd:
+    daemon_reload: true
+
 - name: Restart OpenVPN service
   service:
     name: "openvpn@{{ openvpn_client_config_identifier }}"
